<resources>
    <string name="app_name">Quakes</string>
    <string name="magnitude">Magnitude</string>
    <string name="region">Region</string>
    <string name="time">Time</string>
    <string name="descending">Descending</string>
    <string name="mag_format">%1$1.2f</string>
    <string name="name">Name</string>
    <string name="global">Global</string>
    <string name="details">Details</string>
    <string name="feeling">Feeling</string>
    <string name="location">Location</string>
    <string name="depth">Depth</string>
    <string name="coordinates_format">%1$s, \t %2$s</string>
    <string name="depth_format">%1$s \t %2$s</string>
    <string name="search_title">Search</string>
    <string name="date_title">Date</string>
    <string name="from_title">From</string>
    <string name="to_title">To</string>
    <string name="start_search">Select date and click on the search button</string>
    <string name="please_select_a_date">Please select valid dates</string>
    <string name="no_results">No results for your entries</string>
    <string name="date_format">%1$s/%2$s/%3$s</string>
    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_text">Allow the app to send notification?</string>
    <string name="dialog_permission_button">Allow</string>
    <string name="default_notification_channel_id">Updates</string>
    <string name="default_notification_channel_desc">The default channel for general notifications</string>
    <string name="update_required">Update required</string>
    <string name="update_message">To keep using Quakes, download \n the latest version</string>
    <string name="update_title">Update</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_title">No internet</string>
    <string name="no_internet_message">Please check your connection and try again</string>
    <string name="select_up_to_14_days">Select up to 14 days</string>
    <string name="from_to">%1$s ─ %2$s</string>
    <string name="no_available_data">There is no available data</string>
    <string name="latest_earthquakes_title">Latest earthquakes in last 24 hours</string>
    <string name="confirm">Confirm</string>
    <string name="region_all">All</string>
    <string name="region_africa">Africa</string>
    <string name="region_americas">Americas</string>
    <string name="region_antarctic">Antarctic</string>
    <string name="region_asia">Asia</string>
    <string name="region_europe">Europe</string>
    <string name="region_oceania">Oceania</string>
    <string name="loading_ad">Loading Ad</string>

    <string-array name="feeling_scale">
        <item>Not felt</item>
        <item>Felt slightly by some people. No damage to buildings</item>
        <item>Often felt by people, but very rarely causes damage</item>
        <item>Felt by most people</item>
        <item>Zero to slight damage to buildings. Felt by everyone</item>
        <item>Damage to a moderate number of well-built structures in populated areas</item>
        <item>Causes damage to most building</item>
        <item>Major damage to buildings</item>
        <item>Severe damage or collapse to all buildings</item>
    </string-array>

    <string-array name="regions">
        <item>All</item>
        <item>Africa</item>
        <item>Americas</item>
        <item>Antarctic</item>
        <item>Asia</item>
        <item>Oceania</item>
        <item>Europe</item>
    </string-array>

</resources>