<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/regionAll"
        android:title="@string/region_all" />
    <item
        android:id="@+id/regionAfrica"
        android:title="@string/region_africa" />
    <item
        android:id="@+id/regionAmerica"
        android:title="@string/region_americas" />
    <item
        android:id="@+id/regionAntarctic"
        android:title="@string/region_antarctic" />
    <item
        android:id="@+id/regionAsia"
        android:title="@string/region_asia" />
    <item
        android:id="@+id/regionEurope"
        android:title="@string/region_europe" />
    <item
        android:id="@+id/regionOceania"
        android:title="@string/region_oceania" />

</menu>